--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.0",
+    "@nextui-org/navbar": "^2.0.37",
     "antd": "^5.16.1",
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
