--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
