--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.0",
+    "@mui/x-date-pickers": "^7.23.0",
     "@nextui-org/navbar": "^2.0.37",
+    "@tippyjs/react": "^4.2.6",
     "antd": "^5.16.1",
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
@@ -21,10 +23,12 @@
     "next": "14.2.15",
     "prop-types": "^15.8.1",
     "react": "^18",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "tippy.js": "^6.3.7",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
