--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-time-picker": "^7.0.0",
     "tippy.js": "^6.3.7",
     "zustand": "^5.0.1"
   },
