--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.472.0",
     "next": "14.2.15",
     "prop-types": "^15.8.1",
     "react": "^18",
