--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.0",
+    "@headlessui/react": "^2.2.0",
     "@mui/x-date-pickers": "^7.23.0",
     "@nextui-org/navbar": "^2.0.37",
     "@tippyjs/react": "^4.2.6",
